--- a/content/pics/cradle.html
+++ b/content/pics/cradle.html
@@ -8,6 +8,15 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-0CPGN06NB5"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-0CPGN06NB5');
+</script>
 <body>
 
   <div id="festivalPlannerCarousel" class="carousel slide" style="width: 100%; height: 100%;" data-ride="carousel">
