--- a/content/pics/typing-effect.html
+++ b/content/pics/typing-effect.html
@@ -3,39 +3,38 @@
 <head>
   <meta charset="utf-8">
   <style>
+    html, body {
+      margin: 0;
+      padding: 0;
+      background: transparent;
+    }
+
     .typewriter {
-      /* 中性灰背景 */
-      background: #2d2d2d;
+      background: transparent;
       padding: 1.5rem;
       border-radius: 8px;
       font-family: 'Courier New', monospace;
       position: relative;
       min-height: 100px;
-      /* 半透明效果 */
-      background-color: rgba(45, 45, 45, 0.9);
-      /* 浅色文字 */
       color: #ffffff;
-      /* 阴影增强层次感 */
-      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
+      box-shadow: none;
     }
 
     #text-container {
-      font-size: 1.2rem;
-      line-height: 1.5;
+      font-size: 1.5rem;          /* ✅ 字体变大 */
+      font-weight: bold;          /* ✅ 字体加粗 */
+      line-height: 1.6;
       white-space: pre-wrap;
-      /* 优化可读性 */
       text-shadow: 0 1px 2px rgba(0, 0, 0, 0.3);
     }
 
     .cursor {
       display: inline-block;
       width: 8px;
-      height: 1.2em;
-      /* 使用高对比光标颜色 */
+      height: 1.5em;
       background: #4CAF50;
       animation: blink 1s infinite;
       vertical-align: middle;
-      /* 光标阴影 */
       box-shadow: 0 0 4px rgba(76, 175, 80, 0.3);
     }
 
@@ -44,20 +43,19 @@
       50% { opacity: 0; }
     }
 
-    /* 适配深色模式 */
     @media (prefers-color-scheme: dark) {
       .typewriter {
-        background-color: rgba(30, 30, 30, 0.95);
+        background-color: transparent;
         color: #e0e0e0;
       }
     }
 
-    /* 适配浅色模式 */
     @media (prefers-color-scheme: light) {
       .typewriter {
-        background-color: rgba(245, 245, 245, 0.95);
+        background-color: transparent;
         color: #333;
       }
+
       .cursor {
         background: #2d2d2d;
       }
@@ -71,15 +69,13 @@
   </div>
 
   <script>
-    // 配置参数保持不变
     const config = {
-      text: "Hello! I’m Bruce. 5th year Computing Science Undergraduate @ Simon Fraser University.",
+      text: "Hello, I'm Wenxiang He.\nA recent graduate with a Bachelor of Science in Computing Science from Simon Fraser University.",
       typingSpeed: 50,
       deleteSpeed: 30,
       pauseDuration: 2000
     };
 
-    // TypeWriter类保持不变
     class TypeWriter {
       constructor() {
         this.element = document.getElementById('text-container');
@@ -119,7 +115,6 @@
       }
     }
 
-    // 初始化保持不变
     document.addEventListener('DOMContentLoaded', () => {
       const writer = new TypeWriter();
       writer.start();
