Quartz sync: Mar 22, 2025, 9:39 PM

--- a/content/pics/typing-effect.html
+++ b/content/pics/typing-effect.html
@@ -6,23 +6,23 @@
     html, body {
       margin: 0;
       padding: 0;
-      background: transparent;
+      background-color: #FAF8F8; /* 默认背景用于不支持 prefers-color-scheme 的环境 */
     }
 
     .typewriter {
-      background: transparent;
       padding: 1.5rem;
       border-radius: 8px;
       font-family: 'Courier New', monospace;
       position: relative;
       min-height: 100px;
-      color: #ffffff;
+      color: #333;
+      background-color: #FAF8F8; /* 浅色模式背景 */
       box-shadow: none;
     }
 
     #text-container {
-      font-size: 1.5rem;          /* ✅ 字体变大 */
-      font-weight: bold;          /* ✅ 字体加粗 */
+      font-size: 1.5rem;
+      font-weight: bold;
       line-height: 1.6;
       white-space: pre-wrap;
       text-shadow: 0 1px 2px rgba(0, 0, 0, 0.3);
@@ -44,15 +44,27 @@
     }
 
     @media (prefers-color-scheme: dark) {
+      html, body {
+        background-color: #1a1a1a;
+      }
+
       .typewriter {
-        background-color: transparent;
+        background-color: #1a1a1a;
         color: #e0e0e0;
+      }
+
+      .cursor {
+        background: #4CAF50;
       }
     }
 
     @media (prefers-color-scheme: light) {
+      html, body {
+        background-color: #FAF8F8;
+      }
+
       .typewriter {
-        background-color: transparent;
+        background-color: #FAF8F8;
         color: #333;
       }
 
