--- a/content/pics/typing-effect.html
+++ b/content/pics/typing-effect.html
@@ -45,11 +45,11 @@
 
     @media (prefers-color-scheme: dark) {
       html, body {
-        background-color: #1a1a1a;
+        background-color: #161618;
       }
 
       .typewriter {
-        background-color: #1a1a1a;
+        background-color: #161618;
         color: #e0e0e0;
       }
 
