Quartz sync: Mar 22, 2025, 10:06 PM

--- a/content/pics/typing-effect.html
+++ b/content/pics/typing-effect.html
@@ -6,7 +6,7 @@
     html, body {
       margin: 0;
       padding: 0;
-      background-color: #FAF8F8; /* 默认背景用于不支持 prefers-color-scheme 的环境 */
+      background-color: #FAF8F8;
     }
 
     .typewriter {
@@ -16,7 +16,7 @@
       position: relative;
       min-height: 100px;
       color: #333;
-      background-color: #FAF8F8; /* 浅色模式背景 */
+      background-color: #FAF8F8;
       box-shadow: none;
     }
 
