Quartz sync: Mar 27, 2025, 12:18 PM

--- a/content/pics/typing-effect.html
+++ b/content/pics/typing-effect.html
@@ -82,9 +82,12 @@
 
   <script>
     const config = {
-      text: "Hello, I'm Wenxiang He.\nA recent graduate with a Bachelor of Science in Computing Science from Simon Fraser University.",
+      text: `Hello, I'm Wenxiang He.
+            A recent graduate with a Bachelor of Science in Computing Science from Simon Fraser University.
+            I have strong interest in Full Stack Development, Artificial Intelligence, and Robotics.
+            I have hands-on experience in frontend, backend, mobile app development, and software testing.`,
       typingSpeed: 50,
-      deleteSpeed: 30,
+      deleteSpeed: 80,
       pauseDuration: 2000
     };
 
