Quartz sync: Apr 2, 2025, 3:09 PM

--- a/content/pics/typing-effect.html
+++ b/content/pics/typing-effect.html
@@ -16,9 +16,10 @@
     }
 
     .typewriter {
-      padding: 2rem;
+      padding: 1rem;
       border-radius: 12px;
       font-family: 'Inter', sans-serif;
+      /* font-family: 'Courier New', monospace; */
       position: relative;
       min-height: 100px;
       color: var(--text-color);
@@ -26,8 +27,8 @@
     }
 
     #text-container div {
-      font-size: 1.1rem; /* 所有非高亮行的小字体 */
-      margin-bottom: 0.5rem;
+      font-size: 1rem; /* 所有非高亮行的小字体 */
+      margin-bottom: 0.6rem;
     }
 
     #text-container .highlight {
@@ -38,7 +39,7 @@
     }
     .cursor {
       display: inline-block;
-      width: 8px;
+      width: 6px;
       height: 1.5em;
       background: var(--cursor-color);
       animation: blink 1s infinite;
@@ -83,7 +84,8 @@
         { text: "Wenxiang He.", highlight: true },
         { text: "A recent graduate with a Bachelor of Science in Computing Science from Simon Fraser University." },
         { text: "I have strong research and development background in Artificial Intelligence, Robotics, and Full Stack Development." },
-        { text: "I am currently working at China Petrochemical Corporation (Sinopec) on applying large-scale models to logging interpretation. Recently, I’ve been exploring DeepSeek, large model deployment strategies, and agent frameworks. Feel free to check them out!" }
+        { text: "I am currently working at China Petrochemical Corporation (Sinopec) on applying large-scale models to logging interpretation. Recently, I’ve been exploring DeepSeek, large model deployment strategies, and agent frameworks." },
+        { text: "Feel free to check them out!"},
       ],
       typingSpeed: 40
     };
